--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <script>
+      (function() {
+        try {
+          var stored = localStorage.getItem('theme');
+          var prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+          var isDark = stored ? stored === 'dark' : prefersDark;
+          var root = document.documentElement;
+          var body = document.body;
+          if (isDark) { root.classList.add('dark'); body && body.classList.add('dark'); }
+          else { root.classList.remove('dark'); body && body.classList.remove('dark'); }
+        } catch {}
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
